=== rmw ChangeLog ===

2021-12-30

  * removed '-e' command line option ('--empty' option not affected)

2021-06-28

  * rmw v0.8.0 released

2021-06-21

  * Replaced autotools build system with meson

2021-06-04

  * rmw now uses the canfigger library for parsing the configuration file.

2021-05-23

  * The config option 'purge_after' has been deprecated and replaced
  with 'expire_age' ('purge_after' will still be accepted, but the user
  will be given a deprecation warning).

  * Expanded the man page and updated the README (improved documentation)

  * disabled a restore test that failed when 'make check' is run with
  superuser privileges

2021-05-13

  * The environmental variable RMWTEST_HOME has been replaced with
  RMW_FAKE_HOME (Trying to use RMWTEST_HOME will give a deprecation
  warning and still work).

2021-05-12

  * When '-u' is used, the mrl file will no longer be removed, but
  emptied instead. If a user gives the '-u' option when the mrl file is
  empty, they will get a friendlier message stating that there are no
  items in the list (instead of an error message about the file not
  being found).

  * bugfix: fixed handling of dot dirs ('.' and '..'). Instead of
  giving an error message and quitting, rmw will print a message
  stating that they'll be skipped.

2021-05-06

  * rmw v0.7.09 released

2021-05-05

  * bugfix: filenames now display correctly when using '-vvg' (#308)

2021-04-29

  * rmw v0.7.08 released

2021-04-28

  * bugfix: fixes test failing on osx using xcode 11.5 and above (#283)

2021-04-26

  * rmw v0.7.07 released

2021-04-25

  * bugfix: list output (rmw -lv) shows all removable devices as
  attached even for those that are detached.

2021-04-23

  * (for testing) Replace RMWTRASH(=fake-year) with RMW_FAKE_YEAR(=true)

2021-04-08

  * bugfix: When restoring files from removable media or devices, rmw
  will now process relative paths (this primarily affects users who